--- a/rules
+++ b/rules
@@ -92,6 +92,10 @@ t (_G -> d
 t (e  -> c
 t (i  -> c
 t (í  -> c
+ma) t (er -> c
+u) t (erák -> c
+do) t (ern -> c
+ne) t (er -> c
 t (ickA   -> t
 t (izova  -> t
 t (izmu   -> t
